--- a/email_test.html
+++ b/email_test.html
@@ -1,7 +1,7 @@
-<p><strong>Name:</strong> Antonyan123123 Sarkis123</p>
-<p><strong>Telephone:</strong> 8 (312) 312-31-23</p>
-<p><strong>E-mail:</strong> test_user2123123@gmail.com</p>
+<p><strong>Name:</strong> Sergey Stepnev</p>
+<p><strong>Telephone:</strong> 0954714542</p>
+<p><strong>E-mail:</strong> webvers2tka.ss@gmail.com</p>
 <p><strong>Source:</strong> Stirlingack</p>
 <p><strong>Enquiry Type:</strong> Sales Viewing Request</p>
-<div style="margin-bottom: 10px;"><strong>Message:</strong> Sales test</div>
+<div style="margin-bottom: 10px;"><strong>Message:</strong> Sales asdasd</div>
 <p><strong>Property:</strong> <a href="https://stirlingack.local/property-for-sale/london/taeping-street-london/">Taeping Street, London</a></p>
