allen chat fixes

--- a/email_test.html
+++ b/email_test.html
@@ -1,7 +1,8 @@
 <p><strong>Name:</strong> Sergey Stepnev</p>
 <p><strong>Telephone:</strong> 0954714542</p>
-<p><strong>E-mail:</strong> webvers2tka.ss@gmail.com</p>
+<p><strong>E-mail:</strong> webverstka.ss@gmail.com</p>
 <p><strong>Source:</strong> Stirlingack</p>
 <p><strong>Enquiry Type:</strong> Sales Viewing Request</p>
-<div style="margin-bottom: 10px;"><strong>Message:</strong> Sales asdasd</div>
+<div style="margin-bottom: 10px;"><strong>Message:</strong> </div>
 <p><strong>Property:</strong> <a href="https://stirlingack.local/property-for-sale/london/taeping-street-london/">Taeping Street, London</a></p>
+<p><strong>Property Ref ID:</strong> rps_twn-CSC210053</p>
