branch form from ga to gtag - gtag category

--- a/email_test.html
+++ b/email_test.html
@@ -9,7 +9,7 @@
 </tr>
 <tr>
 <td>
-                        Hello Sergey Stepnev,</p>
+                        Hello test123 test,</p>
 <p>                        Thank you for your Stirling Ackroyd enquiry. We will be in touch with you shortly. In the meantime, details of the property you enquired about are shown below.
                     </td>
 </tr>
