branch contact prefix for google analytics = Property/Branch

--- a/email_test.html
+++ b/email_test.html
@@ -9,7 +9,7 @@
 </tr>
 <tr>
 <td>
-                        Hello test123 test,</p>
+                        Hello Sergey Stepnev,</p>
 <p>                        Thank you for your Stirling Ackroyd enquiry. We will be in touch with you shortly. In the meantime, details of the property you enquired about are shown below.
                     </td>
 </tr>
@@ -19,19 +19,19 @@
 <table width="100%" cellpadding="5">
 <tr>
 <td align="center">
-                                            <a href="https://stirlingack.local/property-for-sale/london/biscayne-avenue-london/"><img src="http://app.reapit.net/twn/live/pictures/CDL/19/CDL190056_04.jpg" style="max-width:300px;"></a>
+                                            <a href="https://stirlingack.local/property-for-sale/london/dollar-bay-place-london/"><img src="http://app.reapit.net/twn/live/pictures/CEN/21/CEN210193_01.jpg" style="max-width:300px;"></a>
                                         </td>
 </tr>
 <tr>
 <td>
-<h3 style="margin: 0;"><a style="color: #151e46;text-decoration: none;" href="https://stirlingack.local/property-for-sale/london/biscayne-avenue-london/">Biscayne Avenue, London</a></h3>
+<h3 style="margin: 0;"><a style="color: #151e46;text-decoration: none;" href="https://stirlingack.local/property-for-sale/london/dollar-bay-place-london/">Dollar Bay Place, London</a></h3>
 </td>
 </tr>
 <tr>
 <td>
 <table>
 <tr style="color: gray;">
-<td>Asking price &pound;1,600,000</td>
+<td>Asking price &pound;1,190,000</td>
 <td style="padding-left:5px;padding-right:5px;">|</td>
 <td>2 bed</td>
 <td style="padding-left:5px;padding-right:5px;">|</td>
@@ -42,13 +42,12 @@
 </tr>
 <tr>
 <td style="color: gray;">
-<p class="room">Perched atop Charrington Tower (formerly known as Providence Tower) with its breath-taking views across London is this stunning modern duplex, two-bedroom penthouse apartment.<br />
-<b...
+<p class="room">This luxury apartment on the 21st floor has stunning views and offers accommodation in excess of 1000 sq ft. There is a stunning open-plan kitchen with living area and winter garden wi&#8230;
                                         </td>
 </tr>
 <tr>
 <td>
-                                            <a href="https://stirlingack.local/property-for-sale/london/biscayne-avenue-london/" style="display: block;padding: 12px 18px;background-color: #151e46;text-align: center;color: #FFFFFF;text-decoration: none;">View Property</a>
+                                            <a href="https://stirlingack.local/property-for-sale/london/dollar-bay-place-london/" style="display: block;padding: 12px 18px;background-color: #151e46;text-align: center;color: #FFFFFF;text-decoration: none;">View Property</a>
                                         </td>
 </tr>
 </table></div>
